<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.profile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/boxtime"
            android:layout_width="18dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="#FFFEFE"
            android:contentDescription="@string/login"
            android:src="@drawable/logo"
            tools:srcCompat="@drawable/frame_433" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/profiles"
            android:textAlignment="center"
            android:textColor="#1B1B1B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo33"
            android:src="@drawable/search"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck"
            tools:src="@drawable/search" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />


    <!-- Auto layout, variables, and unit scale are not yet supported -->


    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="406dp"
        android:layout_height="730dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/tab"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/account_avatar_profile_user_13_svgrepo_com" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Dileepa Praveen"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="#4561654"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Colombo, Sri Lanka         |" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="2653 Task Completed" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="7sp"
                android:text="@string/email"
                android:textAppearance="@style/email"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:id="@+id/component_10"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/component_9"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/input_label2"
                    android:layout_width="126dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/input_label2"
                    android:textAppearance="@style/input_label"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints,RtlHardcoded,TextSizeCheck" />
            </RelativeLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="7sp"
                android:text="@string/name"
                android:textAppearance="@style/name"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:id="@+id/component_11"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/component_9"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/input_label3"
                    android:layout_width="126dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/input_birthday"
                    android:textAppearance="@style/input_birthday"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints,RtlHardcoded,TextSizeCheck" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_bir"
                android:textAppearance="@style/date_of_bir"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:id="@+id/component_9"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/component_9"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/input_label"
                    android:layout_width="126dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/input_label"
                    android:textAppearance="@style/input_label"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints,RtlHardcoded,TextSizeCheck" />
            </RelativeLayout>

            <TextView
                android:id="@+id/student_id"
                android:layout_width="77dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/student_id"
                android:textAppearance="@style/student_id"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:id="@+id/component_12"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/component_9"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/label_disab"
                    android:layout_width="57dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/label_disab"
                    android:textAppearance="@style/label_disab"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>

            <TextView
                android:id="@+id/gender"
                android:layout_width="54dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="7sp"
                android:text="@string/gender"
                android:textAppearance="@style/gender"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center|center_horizontal"
                android:text="@string/male"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/female"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/addressn"
                android:layout_width="91dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="7sp"
                android:text="@string/address"
                android:textAppearance="@style/addressn"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />


            <RelativeLayout
                android:id="@+id/component_13"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/component_9"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/sunrise_roa"
                    android:layout_width="293dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/sunrise_roa"
                    android:textAppearance="@style/sunrise_roa"
                    android:textSize="16sp"
                    android:translationY="-3.42sp"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/component_4"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/component_4"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/button_larg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center|center_horizontal"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/button_larg"
                    android:textAppearance="@style/button_larg"
                    android:translationY="-1.71sp"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/component_5"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/component_5"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/button_large"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal|top"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/button_large"
                    android:textAppearance="@style/button_large"
                    android:translationY="-1.71sp"
                    tools:ignore="MissingConstraints" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>