<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ntxbtn2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.welcome_screen_02">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearFeaturesbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/ellipse_20"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="#D9D9D9" />

        <View
            android:id="@+id/ellipse_19"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="#0076B8" />

        <View
            android:id="@+id/ellipse_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="#D9D9D9" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="412dp"
        android:layout_height="374dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/track_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip2" />

    <TextView
        android:id="@+id/skip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="344dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearFeaturesbutton"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_gravity="bottom|center"
        android:background="#9C27B0"
        android:backgroundTint="#3C96F3FF"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="19dp"
        android:paddingTop="37dp"
        android:paddingEnd="50dp"
        android:paddingBottom="37dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/track_your_"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/track_your_"
            android:textAppearance="@style/track_your_"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/versatile_t"
            android:layout_width="wrap_content"
            android:layout_height="151dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="4sp"
            android:text="@string/versatile_t"
            android:textAppearance="@style/versatile_t"
            android:textSize="17sp"
            android:translationY="-1.32sp" />

        <RelativeLayout


            android:id="@+id/nextbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:clipToOutline="true"
            android:gravity="center"
            tools:ignore="DuplicateIds">

            <TextView
                android:id="@+id/create_acco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_acco"
                android:textAppearance="@style/create_acco"
                android:textSize="17sp" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>